--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
   <title>Hello, world!</title>
-<head>
+</head>
 <body>
   <p>Hello, world!!</p>
 </body>
