updates image names

--- a/web-design-workshop/site-build-module/climate-crisis-story/index.html
+++ b/web-design-workshop/site-build-module/climate-crisis-story/index.html
@@ -41,7 +41,7 @@
 
 
 <div class="hero-container">
-  <img src="images/SoniaHug_StreetView.jpg" class="hero-image">
+  <img src="images/sonia-hug-streetview.jpg" class="hero-image">
   <div class="overlay">
   <div class="hero-hed"> Heat & Inequality
   <div class="hero-sub">In Baltimore, the burden of rising temperatures isn’t shared.</div></div>
@@ -159,7 +159,7 @@
 
   <!-- Full screen image
         Full screen image requires us to close the container above the image and reopen it below-->
-  <img src="images/SolomonSimmons.jpg" class="hero-image">
+  <img src="images/solomon-simmons.jpg" class="hero-image">
   <p class="caption">Solomon Simmons in his East Baltimore home (Photo by Amina Lampkin | University of Maryland)</p>
   <!-- end full screen image-->
 
@@ -283,7 +283,7 @@
 
 
   <!-- Image video or graphic block with caption -->
-  <img src="images/melissacandy.jpg" class="stack-image">
+  <img src="images/melissa-candy.jpg" class="stack-image">
   <p class="caption">Melissa Canady says that the concrete block walls in her backyard prevent the flow of air and trap heat behind her house. (Photo by Maris Medina | University of Maryland)</p>
   <!-- /End -->
 
